Message indentation fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer type="module" src="script.js"></script>
 </head>
 <body>
-    <h1 id="page-title">인천 아이미래로 업무 사이트</h1>
+    <h1 id="page-title">인천 아이미래로 메시지 생성</h1>
     <header>
         <nav id="nav-bar">
             <div>
